Update First Nations Relations.html

--- a/First Nations Relations.html
+++ b/First Nations Relations.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About Us - Acadia</title>
+		<title>First Nations - Acadia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -27,109 +27,92 @@
 			<header id="header" class="skel-layers-fixed">
 				<h1><a href="index.html">Acadia</a></h1>
 				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="About Us.html">About Us&nbsp;</a></li>
-						<li><a href="Services.html">Services</a></li>
-						<li><a href="Contact.html">Contact</a></li>
-						<li></li>
-					</ul>
-				</nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+
+        <!-- About Us Dropdown -->
+        <li class="dropdown">
+            <a href="#">About Us</a>
+            <ul class="dropdown-menu">
+                <li><a href="Our Company.html">Overview</a></li>
+                <li><a href="Leadership.html">Leadership</a></li>
+                <li><a href="Board of Directors.html">Board of Directors</a></li>
+                <li><a href="Corporate Governance.html">Corporate Governance</a></li>
+                <li><a href="Sustainability.html">Sustainability</a></li>
+                <li><a href="First Nations Relations.html">First Nations</a></li>
+            </ul>
+        </li>
+
+        <!-- Expertise Dropdown (Centered) -->
+        <li class="dropdown">
+            <a href="#">Expertise</a>
+            <ul class="dropdown-menu center-align">
+                <li><a href="Municipal Engineering.html">Municipal Engineering</a></li>
+                <li><a href="Transportation Engineering.html">Transportation Engineering</a></li>
+                <li><a href="Land Development.html">Land Development</a></li>
+                <li><a href="Contract Administration.html">Contract Administration</a></li>
+                <li><a href="Project Management.html">Project Management</a></li>
+                <li><a href="Water.html">Water</a></li>
+                <li><a href="Innovation.html">Innovation</a></li>
+            </ul>
+        </li>
+
+        <!-- Contact Dropdown (Fixed Alignment to Avoid Overflow) -->
+        <li class="dropdown">
+            <a href="#">Contact</a>
+            <ul class="dropdown-menu right-align">
+                <li><a href="Office Locations.html">Office Locations</a></li>
+                <li><a href="Request Quote.html">Request a Quote</a></li>
+                <li><a href="Careers.html">Join Our Team</a></li>
+            </ul>
+        </li>
+    </ul>
+</nav>
 			</header>
 
 		<!-- Main -->
-			<section id="main" class="wrapper style1">
-				<header class="major">
-					<h2>About us</h2>
+			<section id="main" class="wrapper style4">
+				<section class="parallax-banner2">
+					<div class="parallax-bg2"></div>
+				</section>
+			
+	<header class="major2">
+					<h2><strong>first nations</strong>					</h2>
 </header>
 				<div class="container">
-					<div class="row">
-						<div class="4u">
+						<div class="8u">
 							<section>
-<h2>What makes us tick</h2>
-<p>At Acadia Engineering, we believe in pushing the boundaries of innovation, sustainability, and client-focused solutions. Our mission is to design and deliver efficient, cost-effective, and environmentally responsible engineering solutions tailored to the unique challenges of Vancouver Island, the Lower Mainland, the Sea-to-Sky region, and the Sunshine Coast.</p>
-</section>
-</div>
-						<div class="8u skel-cell-important">
-							<section> <a href="#" class="image fit"><img src="images/image10.jpeg" alt=""  /></a>
-								
-						</div>
-							<div class="align-left">
-							<h2>Our meaning</h2>
-								<p>We wanted a company name that reflected a piece of Canadian history itself.&nbsp;</p>
-							  <p>The region of Acadia, now known as Nova Scotia, Prince Edward Island, New Brunswick, Gaspésie, and parts of Maine, were the landing grounds for immigrants to Canada from as far back as the 17th century. The British North America Act created the Dominion of Canada on July 1st, 1867.&nbsp;</p>
-							  <p>During the Seven Years' War, Acadia was a New-France colony which claimed to be neutral in war, however and in spite of everything, a 'Great Expulsion' was carried out between 1755 and 1764 where Acadians were relocated by British forces for military purposes. Many Acadians perished.&nbsp;</p>
-							  <p>Through their resiliency, Acadians returned and still live in the regions of Acadia today and many Canadians have Acadian background in their blood - including Acadia Engineering Inc. founders.&nbsp;</p>
-							  <p>Our logo incorporates the Maple Leaf emblem to show our Canadian identity. A blue surveying tripod level is worked into the 'A' to represent our steadfast dedication to civil engineering.</p>
-								</div>
-</section>
-					</div>
-					<hr class="major" />
-					 <div class="align-center">
-						<h2><strong>Board of Directors</strong></h2> 
-						 </div>
-					<div class="row">
-						<div class="6u">
-							<section class="special">
-								<a href="#" class="image fit">
-									<img src="images/steve.png" alt="Steve Harvey" style="height: 350px; object-fit: cover;">
-								</a>
-								<h3>Steve Harvey, P. Eng.</h3>
-								<h4>President / senior engineer&nbsp;</h4>
-								  <p>Steve holds a Bachelor’s Degree of Science in civil engineering and diploma in Civil Engineering Technology and is designated as a Professional Engineer with EGBC in British Columbia and PEO in Ontario. Steve has designed and managed hundreds of infrastructure upgrade projects for Municipal, Ministry, and Private clients including:</p>
-								  <ul>
-								    <li>The planning, design, and certiﬁ cation of watermain, sanitary sewer, storm sewers, roadway reconstruction/rehabilitations as well as new subdivision developments and Municipal infrastructure replacement and rehabilitation projects, and;</li>
-								    <li>&nbsp;The planning and design of major and minor provincial highway projects, including intersections, realignments, highway resurfacing and related structural replacement and rehabilitation projects.</li>
-							      </ul>
-									<p>Mr. Harvey is qualified as an Expert Engineering Witness by an Ontario Municipal Board/Local Planning Appeal Tribunal Judge for a case in Brighton, Ontario and continues to offer Expert Engineering Witness services. He has further completed hundreds of Engineering Peer Reviews and is qualified to review the work completed by his peer Engineers.</p>
-</section>
-						</div>
-						<div class="6u">
-							<section class="special">
-								<a href="#" class="image fit">
-									<img src="images/Headshot_Photoshopped.png" alt="Josh Culp" style="height: 350px; object-fit: cover;">
-								</a>
-								<h3>Joshua Culp, P.L. eng., let&nbsp;</h3>
-								<h4>CEO / Senior engineer</h4>
-							    <p>Joshua Culp, P. L. Eng. is a Professional Licensee with experience in civil engineering including road design, active transportation, stormwater management, sanitary sewer, water system rehabilitations, and asset management. Josh completed an Advanced Diploma in Civil Engineering Technology in 2014 in Ontario and has been working in BC since 2018.&nbsp;</p>
-							    <p>Josh has found his engineering niche in road and utility rehabilitations, culvert designs and assessments, along with asset management.&nbsp;</p>
-<p>Josh is fluent with MMCD tendering and contract administration. He took the MMCD Contract Administration course in spring of 2021. He is using the Platinum Edition, 2019 Edition, and RFP Edition to produce tenders, RFP’s, and Contracts. </p>
-                          </section>
-						</div>
-					</div>
-					</div>
-					<div class="row">
-						<div class="6u">
-							<section class="special">
-								<a href="#" class="image fit">
-									<img src="images/Brianne Chard_BW.jpg" alt="Alex Bridgett" style="height: 350px; object-fit: cover;">
-								</a>
-								<h3>Brianne Chard, Director</h3>
-								<h4>Chief Financial Officer</h4>
-								  <p>Steve holds a Bachelor’s Degree of Science in civil engineering and diploma in Civil Engineering Technology and is designated as a Professional Engineer with EGBC in British Columbia and PEO in Ontario. Steve has designed and managed hundreds of infrastructure upgrade projects for Municipal, Ministry, and Private clients including:</p>
-								  <ul>
-								    <li>The planning, design, and certiﬁ cation of watermain, sanitary sewer, storm sewers, roadway reconstruction/rehabilitations as well as new subdivision developments and Municipal infrastructure replacement and rehabilitation projects, and;</li>
-								    <li>&nbsp;The planning and design of major and minor provincial highway projects, including intersections, realignments, highway resurfacing and related structural replacement and rehabilitation projects.</li>
-							      </ul>
-									<p>Mr. Harvey is qualified as an Expert Engineering Witness by an Ontario Municipal Board/Local Planning Appeal Tribunal Judge for a case in Brighton, Ontario and continues to offer Expert Engineering Witness services. He has further completed hundreds of Engineering Peer Reviews and is qualified to review the work completed by his peer Engineers.</p>
-</section>
-						</div>
-						<div class="6u">
-							<section class="special">
-								<a href="#" class="image fit">
-								<img src="images/michelle-2.jpg" alt="Josh Culp" style="height: 350px; object-fit: cover;">
-								</a>
-								<h3>Michelle Culp</h3>
-								<h4>Chief Marketing Officer</h4>
-							    <p>Joshua Culp, P. L. Eng. is a Professional Licensee with experience in civil engineering including road design, active transportation, stormwater management, sanitary sewer, water system rehabilitations, and asset management. Josh completed an Advanced Diploma in Civil Engineering Technology in 2014 in Ontario and has been working in BC since 2018.&nbsp;</p>
-							    <p>Josh has found his engineering niche in road and utility rehabilitations, culvert designs and assessments, along with asset management.&nbsp;</p>
-<p>Josh is fluent with MMCD tendering and contract administration. He took the MMCD Contract Administration course in spring of 2021. He is using the Platinum Edition, 2019 Edition, and RFP Edition to produce tenders, RFP’s, and Contracts. </p>
-                          </section>
-						</div>
-				</div>
-			</section>
 
-		<!-- Footer -->
+<h6>Our Commitment to First Nations Communities</h6>
+<p>Acadia Engineering is dedicated to fostering meaningful relationships with First Nations communities across Ontario and British Columbia. We recognize the deep cultural and historical significance of the lands on which we work, and we are committed to respectful engagement, collaboration, and shared success.</p> 
+	<ul> class="ul2"</ul>
+	</section>
+	<section>
+<h6>Partnering for Sustainable Development</h6>
+							<p>We believe that sustainable development is best achieved through strong partnerships. Acadia Engineering works alongside First Nations to ensure that engineering projects are designed with environmental stewardship, cultural awareness, and long-term community benefits in mind. Our approach includes:</p>
+<ul>						
+							  <li>Collaborative Planning - Engaging with First Nations leaders and stakeholders from project inception to completion.</li>
+								<li>Capacity Building - Supporting training, employment, and knowledge-sharing opportunities for Indigenous workers.</li>								
+								<li>Respect for Indigenous Knowledge - Integrating traditional ecological knowledge into engineering solutions.</li>
+							</ul>
+	</section>
+	<section>						
+<h6>Areas of Expertise</h6>
+							<p>Acadia Engineering provides a range of engineering services tailored to meet the needs of First Nations communities, including:</p>
+<ul>						
+							  <li>Civil and land development engineering for community infrastructure</li>
+								<li>Water and wastewater system design</li>							
+								<li>Transportation and road planning</li>
+								<li>Project management and feasibility studies</li>
+							</ul>
+</section>
+							<section>
+
+<h6>Building Stronger Communities Together</h6>
+<p>Our goal is to create lasting, positive impacts by working together with First Nations to build resilient, self-sustaining communities. We are always open to new collaborations and welcome discussions on how Acadia Engineering can support your community’s goals.</p>
+	
+	</section>
+<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
 <ul class="copyright">
@@ -139,6 +122,6 @@
 					</ul>
 				</div>
 			</footer>
-
+	</div>
 	</body>
 </html>
