--- a/Board of Directors.html
+++ b/Board of Directors.html
@@ -109,7 +109,7 @@
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit">
-								<img src="images/Headshot_Photoshopped.png" alt="Josh Culp" style="height: 350px; object-fit: cover;">
+								<img src="images/Headshot1.jpg" alt="Josh Culp" style="height: 350px; object-fit: cover;">
 								</a>
 								<h3>Joshua Culp, P.L. Eng., LET</h3>
 								<h4>Chief Executive Officer</h4>
