--- a/Office Locations.html
+++ b/Office Locations.html
@@ -85,8 +85,8 @@
 					<div class="row">
 	<div class="6u">
 							<section class="special">
-								<a href="#" class="image fit"><img src="images/Toronto.jpeg" alt="" /></a>
-								<h3><strong>Toronto, ON</strong></h3>
+								<a href="#" class="image fit"><img src="images/Belleville.jpeg" alt="" /></a>
+								<h3><strong>Belleville, ON</strong></h3>
 								<p>121 Dundas Street East, Suite 103A,&nbsp;</p>
 							  	<p>Belleville, Ontario K8N 1C3, Canada&nbsp;</p>
 								<p>Email: Steve@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Office: (613) 779-1144</p>
@@ -97,9 +97,9 @@
 							<section class="special">
 								<a href="#" class="image fit"><img src="images/Vancouver.jpeg" alt="" /></a>
 								<h3><strong>Vancouver, BC</strong></h3>
-								<p>#103 - 39767 Government Road,&nbsp;</p>
-							  <p>Squamish, British Columbia, V8B 0G3&nbsp;</p>
-								<p>Email: Josh@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Office: (250) 668-7534</p>
+								<p>997 Seymour Street,&nbsp;</p>
+							  <p>Vancouver, British Columbia, V6B 3M1</p>
+								<p>Email: Josh@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Office: (778) 732-5413</p>
 						
 						<hr class="major" />
 	</section>
@@ -107,11 +107,11 @@
 					<div class="row">
 						<div class="6u">
 	  						<section class="special">
-								<a href="#" class="image fit"><img src="images/Ottawa.jpeg" alt="" /></a>
-								<h3><strong>Ottawa, On</strong></h3>
-								<p>121 Dundas Street East, Suite 103A,&nbsp;</p>
-							  	<p>Belleville, Ontario K8N 1C3, Canada&nbsp;</p>
-								<p>Email: Steve@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Office: (613) 779-1144</p>
+								<a href="#" class="image fit"><img src="images/AdobeStock_531515260_Preview.jpeg" alt="" /></a>
+								<h3><strong>Ladysmith, BC</strong></h3>
+								<p>1126 Sharp Place,</p>
+							  	<p>Ladysmith, British Columbia, V9G 1A2</p>
+								<p>Email: Josh@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Office: (250) 668-7534</p>
 
 							</section>
 						</div>
@@ -121,31 +121,11 @@
 								<h3><strong>Squamish, bc</strong></h3>
 								<p>#103 - 39767 Government Road,&nbsp;</p>
 							  <p>Squamish, British Columbia, V8B 0G3&nbsp;</p>
-								<p>Email: Josh@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Office: (778) 732-5413</p>
+								<p>Email: Josh@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Office: (778) 773-0595</p>
 				</div>
 								<hr class="major" />
 										</div>
-					<div class="row">
-							<div class="6u">
-								<section class="special">
-								<a href="#" class="image fit"><img src="images/Belleville.jpeg" alt="" /></a>
-								<h3><strong>Belleville, On</strong></h3>
-								<p>121 Dundas Street East, Suite 103A,&nbsp;</p>
-							  	<p>Belleville, Ontario K8N 1C3, Canada&nbsp;</p>
-								<p>Email: Steve@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Office: (613) 779-1144</p>
-
-							</section>
-						</div>
-						<div class="6u">
-							<section class="special">
-								<a href="#" class="image fit"><img src="images/AdobeStock_531515260_Preview.jpeg" alt="" /></a>
-								<h3><strong>Ladysmith, bc</strong></h3>
-								<p>1126 Sharp Place,&nbsp;</p>
-							  <p>Ladysmith, British Columbia, V9G 1A2&nbsp;</p>
-								<p>Email: Josh@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Office: (250) 668-7534</p>
-							</section>
-						</div>
-					</div>
+					
 				</div>
 			</section>
 
