--- a/Board of Directors.html
+++ b/Board of Directors.html
@@ -44,7 +44,7 @@
 
         <li class="dropdown">
             <a href="#">Expertise</a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu center-align">
                 <li><a href="Municipal Engineering.html">Municipal Engineering</a></li>
                 <li><a href="Transportation Engineering.html">Transportation Engineering</a></li>
                 <li><a href="Land Development.html">Land Development</a></li>
@@ -57,7 +57,7 @@
 
         <li class="dropdown">
             <a href="#">Contact</a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu right-align">
                 <li><a href="Office Locations.html">Office Locations</a></li>
                 <li><a href="Request Quote.html">Request a Quote</a></li>
                 <li><a href="Careers.html">Join Our Team</a></li>
@@ -79,19 +79,19 @@
 						<div class="6u">
 						  <section class="special">
 								<a href="#" class="image fit">
-									<img src="images/steve.png" alt="Steve Harvey" style="height: 350px; object-fit: cover;">
+									<img src="images/Brianne Chard_BW.jpg" alt="Steve Harvey" style="height: 350px; object-fit: cover;">
 								</a>
-								<h3>Steve Harvey, P. Eng.</h3>
-							<h4>President / senior engineer&nbsp;</h4>
+								<h3>BRIANNE CHARD</h3>
+							<h4>Chair</h4>
 </section>
 						</div>
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit">
-									<img src="images/Brianne Chard_BW.jpg" alt="Josh Culp" style="height: 350px; object-fit: cover;">
+									<img src="images/michelle-2.jpg" alt="Josh Culp" style="height: 350px; object-fit: cover;">
 								</a>
-								<h3>Brianne chard</h3>
-								<h4>Chief Financial Officer</h4>
+								<h3>Michelle Culp</h3>
+								<h4>Director</h4>
 </section>
 						</div>
 					</div>
@@ -100,10 +100,10 @@
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit">
-								<img src="images/michelle-2.jpg" alt="Alex Bridgett" style="height: 350px; object-fit: cover;">
+								<img src="images/steve.png" alt="Alex Bridgett" style="height: 350px; object-fit: cover;">
 								</a>
-								<h3>Michelle Culp</h3>
-								<h4>Chief Marketing Officer</h4>
+								<h3>STEVE HARVEY, P. ENG.</h3>
+								<h4>Director</h4>
 </section>
 						</div>
 						<div class="6u">
@@ -112,7 +112,7 @@
 								<img src="images/Headshot1.jpg" alt="Josh Culp" style="height: 350px; object-fit: cover;">
 								</a>
 								<h3>Joshua Culp, P.L. Eng., LET</h3>
-								<h4>Chief Executive Officer</h4>
+								<h4>Director</h4>
 </section>
 						</div>
 				</div>
