--- a/Contract Administration.html
+++ b/Contract Administration.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About Us - Acadia</title>
+		<title>Contract Admin - Acadia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -39,7 +39,7 @@
                 <li><a href="Board of Directors.html">Board of Directors</a></li>
                 <li><a href="Corporate Governance.html">Corporate Governance</a></li>
                 <li><a href="Sustainability.html">Sustainability</a></li>
-                <li><a href="First Nations Relations.html">First Nations</a></li>
+                <li><a href="First Nations.html">First Nations</a></li>
             </ul>
         </li>
 
