--- a/Municipal Engineering.html
+++ b/Municipal Engineering.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Acadia</title>
+		<title>Municipal Engineering - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
@@ -62,7 +62,7 @@
                 <li><a href="Board of Directors.html">Board of Directors</a></li>
                 <li><a href="Corporate Governance.html">Corporate Governance</a></li>
                 <li><a href="Sustainability.html">Sustainability</a></li>
-                <li><a href="First Nations Relations.html">First Nations</a></li>
+                <li><a href="First Nations.html">First Nations</a></li>
             </ul>
         </li>
 
