--- a/Office Locations.html
+++ b/Office Locations.html
@@ -39,7 +39,7 @@
                 <li><a href="Board of Directors.html">Board of Directors</a></li>
                 <li><a href="Corporate Governance.html">Corporate Governance</a></li>
                 <li><a href="Sustainability.html">Sustainability</a></li>
-                <li><a href="First Nations Relations.html">First Nations</a></li>
+                <li><a href="First Nations.html">First Nations</a></li>
             </ul>
         </li>
 
