--- a/Sustainability.html
+++ b/Sustainability.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Ion by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 	<head>
-		<title>Acadia</title>
+		<title>Sustainability - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
@@ -40,7 +36,7 @@
                 <li><a href="Board of Directors.html">Board of Directors</a></li>
                 <li><a href="Corporate Governance.html">Corporate Governance</a></li>
                 <li><a href="Sustainability.html">Sustainability</a></li>
-                <li><a href="First Nations Relations.html">First Nations</a></li>
+                <li><a href="First Nations.html">First Nations</a></li>
             </ul>
         </li>
 
@@ -86,11 +82,7 @@
 			<section id="one" class="wrapper style1">
 				<header class="major">
 					<h2>Sustainability</h2>
-					<div class="align-center">
-					<ul class="actions">
-					  <li><a href="Services.html" class="button alt"><strong>What We Do</strong></a></li>
-					</ul>
-					</div>
+					<div class="align-center"> </div>
 </header>
 				<div class="container">
 					<div class="row">
