--- a/Water.html
+++ b/Water.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Acadia</title>
+		<title>Water Resources - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
@@ -40,7 +40,7 @@
                 <li><a href="Board of Directors.html">Board of Directors</a></li>
                 <li><a href="Corporate Governance.html">Corporate Governance</a></li>
                 <li><a href="Sustainability.html">Sustainability</a></li>
-                <li><a href="First Nations Relations.html">First Nations</a></li>
+                <li><a href="First Nations.html">First Nations</a></li>
             </ul>
         </li>
 
