--- a/Water.html
+++ b/Water.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Corporate Governance - Acadia</title>
+		<title>Water Resources - Acadia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -70,7 +70,7 @@
     <section class="glass-banner2">
         <div class="glass glass-content2">
           <h6 class="custom-h6">Resilient Solutions for Sustainable Development</h6>
-<p>At Acadia Engineering, we specialize in water resource management that meets the evolving needs of government agencies and land developers across British Columbia and Ontario. Our expertise ensures that infrastructure and development projects are climate-resilient, environmentally responsible, and fully compliant with provincial and municipal regulations.</p>
+<p class="glass-paragraph">At Acadia Engineering, we specialize in water resource management that meets the evolving needs of government agencies and land developers across British Columbia and Ontario. Our expertise ensures that infrastructure and development projects are climate-resilient, environmentally responsible, and fully compliant with provincial and municipal regulations.</p>
 </div>
     </section>
 
@@ -80,41 +80,45 @@
 <div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
       <div class="glass-card2" style="padding: 20px; width: 250px;">
           <h4 class="custom-h4">Stormwater Management &amp; Climate Resilience</h4>
-          <p>Using IoT and AI for smarter urban planning.</p>
+          <p>As climate change intensifies rainfall variability and extreme weather events, effective stormwater management is more critical than ever. Our team designs resilient water management solutions that reduce flood risk, protect infrastructure, and safeguard communities.</p>
       </div>
       <div class="glass-card2" style="padding: 20px; width: 250px;">
            <h4 class="custom-h4">Watershed &amp; Flood Risk Analysis</h4>
-          <p>Digital Twin solutions for future-proof projects.</p>
+          <p>We conduct comprehensive watershed assessments to evaluate hydrological impacts and flood risks. Our modeling and analysis help municipalities and developers implement evidence-based mitigation strategies to enhance community safety and long-term sustainability.</p>
       </div>
       <div class="glass-card2" style="padding: 20px; width: 250px;">
            <h4 class="custom-h4">Erosion Control &amp; Water Quality Protection</h4>
-          <p>Leverage 3D modeling for accurate simulations.</p>
+          <p>Uncontrolled runoff and land disturbance can lead to erosion and degraded water quality. We integrate proven erosion control measures into site designs to protect natural waterways, maintain compliance with environmental regulations, and support healthy ecosystems.</p>
       </div>
+		<div class="glass-card2" style="padding: 20px; width: 250px;">
+           <h4 class="custom-h4">water supply &amp; Infrastructure design</h4>
+          <p>From municipal water systems to private developments, we provide engineering solutions that ensure reliable and sustainable water supply. Our designs align with provincial water standards and support responsible resource management.</p>
+    </div>
     </div>
     </section>
 		<!-- Glass Cards Section with Custom Colors -->
 <section class="glass2" style="padding: 40px; text-align: center; background-color: #41576C; color: #cfb06e;">
-    <h6>What it means</h6>
+  <h6>What it means</h6>
+    <h1 class="custom-h1">Sustainability at the Core</h1>
+  <p>We prioritize climate resilience by designing systems that adapt to future conditions, integrating green infrastructure such as permeable surfaces, bioretention systems, and naturalized drainage solutions. We also incorporate Low Impact Development (LID) strategies where feasible, reducing environmental impact while maintaining project viability.</p>
+    <p>We have extensive knowledge of BC and Ontario’s water resource regulations, ensuring that our designs comply with:&nbsp;</p>
 <div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px; flex-wrap: wrap;">
         
       <!-- Optimized Design Software -->
       <div class="glass-card">
-          <h4>Optimized Design Software</h4>
-          <p>Utilizing custom design software to push the limits of design effectiveness and costs.</p>
-      </div>
+          <h4 class="custom-h4">Municipal stormwater and floodplain management bylaws</h4>
+</div>
 
       <!-- Custom Sensor Solutions -->
       <div class="glass-card">
-          <h4>Custom Sensor Solutions</h4>
-          <p>Harnessing off-the-shelf hardware to solve client challenges and expand possibilities.</p>
-      </div>
+          <h4 class="custom-h4">Ministry of Environment &amp; regulator guidelines</h4>
+</div>
 
       <!-- Cost Savings -->
       <div class="glass-card">
-          <h4>Cost Savings</h4>
-          <p>Adapting to evolving technologies ensures our engineers stay efficient, reducing costs and maximizing value.</p>
-      </div>
-    </div>
+          <h4 class="custom-h4">Provincial water quality and conservation regulations</h4>
+</div>
+  </div>
 </section>
 
 
