--- a/Innovation.html
+++ b/Innovation.html
@@ -116,6 +116,61 @@
       </div>
     </div>
 </section>
+		<!-- Glassmorphism Banner -->
+    <section class="glass-banner3">
+        <div class="glass glass-content3">
+    <h6>Drones in Engineering</h6>
+    <div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px; flex-wrap: wrap;">
+        
+      <!-- Optimized Design Software -->
+      <div class="glass-card3">
+        <h42>Precision Surveying &amp Mapping</h4>
+      </div>
+
+      <!-- Custom Sensor Solutions -->
+      <div class="glass-card3">
+        <h42>Construction Monitoring &amp Inspections</h42>
+          <p>&nbsp;</p>
+      </div>
+
+      <!-- Cost Savings -->
+      <div class="glass-card3">
+        <h42>Advanced Water Resource Management</h42>
+          <p>&nbsp;</p>
+      </div>
+		
+    </div>
+    </section>
+    <section class="glass-banner4">
+        <div class="glass glass-content4">
+    <h6>Python in Engineering</h6>
+       <div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px; flex-wrap: wrap;">
+        
+      <!-- Optimized Design Software -->
+      <div class="glass-card4">
+        <h4 class="custom-h4">Advanced Data Analysis &amp; Visualization</h4>
+      </div>
+
+      <!-- Custom Sensor Solutions -->
+      <div class="glass-card4">
+        <h4 class="custom-h4">Automated Workflows &amp; Process Optimization</h4>
+</div>
+
+      <!-- Cost Savings -->
+      <div class="glass-card4">
+        <h4 class="custom-h4">Predictive Modeling &amp; Risk Assessment</h4>
+</div>
+		    <!-- Cost Savings -->
+      <div class="glass-card4">
+        <h4 class="custom-h4">GIS Integration &amp; Spatial Analysis</h4>
+</div>
+		   	    <!-- Cost Savings -->
+      <div class="glass-card4">
+        <h4 class="custom-h4">Custom Software &amp; Application Development</h4>
+</div>
+		
+    </div>
+    </section>
 
 
 		<!-- Footer -->
