--- a/Innovation.html
+++ b/Innovation.html
@@ -124,19 +124,17 @@
         
       <!-- Optimized Design Software -->
       <div class="glass-card3">
-        <h42>Precision Surveying &amp Mapping</h4>
+        <h4 class="custom-h4">Precision Surveying &amp Mapping</h4>
       </div>
 
       <!-- Custom Sensor Solutions -->
       <div class="glass-card3">
-        <h42>Construction Monitoring &amp Inspections</h42>
-          <p>&nbsp;</p>
+        <h4 class="custom-h4">Construction Monitoring &amp Inspections</h4>
       </div>
 
       <!-- Cost Savings -->
       <div class="glass-card3">
-        <h42>Advanced Water Resource Management</h42>
-          <p>&nbsp;</p>
+        <h4 class="custom-h4">Advanced Water Resource Management</h4>
       </div>
 		
     </div>
