--- a/Corporate Governance.html
+++ b/Corporate Governance.html
@@ -77,13 +77,12 @@
 </header>
 				<div class="container">
 						<div class="8u">
-							<section>
-
-<p>At Acadia Engineering, we are committed to the highest standards of corporate governance, ensuring integrity, accountability, and transparency in every aspect of our business. Our governance framework is designed to foster ethical decision-making, regulatory compliance, and sustainable growth, while delivering value to our clients, stakeholders, and communities. Our Governance Principles: 
+<section>
+<p>At Acadia Engineering, we are committed to the highest standards of corporate governance, ensuring integrity, accountability, and transparency in every aspect of our business. Our governance framework is designed to foster ethical decision-making, regulatory compliance, and sustainable growth, while delivering value to our clients, stakeholders, and communities. Our Governance Principles: </p>
 	<ul class="ul2"
-		<ul>						
+							<ul>						
 								<li>Ethical Leadership – We uphold a culture of integrity and ethical decision-making at all levels of the organization.</li>
-								<li>Transparency &amp; Accountability – We operate with openness, ensuring clear communication with stakeholders and adherence to industry best practices.								
+								<li>Transparency &amp; Accountability – We operate with openness, ensuring clear communication with stakeholders and adherence to industry best practices.	</li>							
 								<li>Regulatory Compliance – We meet or exceed all applicable laws, regulations, and industry standards in British Columbia and Ontario. </li>
 								<li>Risk Management – We proactively identify and mitigate risks to ensure the long-term stability and resilience of our projects and operations. </li>
 								<li>Sustainability &amp; Responsibility – We integrate sustainable practices into our engineering solutions, considering environmental, social, and economic impacts. 
@@ -92,7 +91,8 @@
 	
 <p>Governance Structure: Our governance structure includes a Board of Directors and an executive leadership team, who provide oversight, strategic direction, and risk management to drive sustainable business success.At Acadia Engineering, strong corporate governance is fundamental to our mission of delivering innovative, cost-effective, and sustainable engineering solutions.</p>
 </section>
-
+		</div>
+</div>
 
 		<!-- Footer -->
 			<footer id="footer">
@@ -104,6 +104,6 @@
 					</ul>
 				</div>
 			</footer>
-
+		</section>
 	</body>
 </html>
