--- a/First Nations.html
+++ b/First Nations.html
@@ -109,7 +109,9 @@
 <h6>Building Stronger Communities Together</h6>
 <p>Our goal is to create lasting, positive impacts by working together with First Nations to build resilient, self-sustaining communities. We are always open to new collaborations and welcome discussions on how Acadia Engineering can support your community’s goals.</p>
 	
-	</section>
+				</section>
+			</div>
+		</div>
 <!-- Footer -->
 			<footer id="footer">
 				<div class="container">
