--- a/Project Management.html
+++ b/Project Management.html
@@ -69,8 +69,9 @@
     </ul>
 </nav>
 			</header>
-
+</section>
 		<!-- Main -->
+	<section>
 			<section id="main" class="wrapper style3">
 				<section class="parallax-banner4">
 					<div class="parallax-bg4"></div>
@@ -83,10 +84,10 @@
 						<div class="8u">
 							<section>
 
-<p>At Acadia Engineering, our Project Management services are designed to lead your projects from concept to completion with precision, efficiency, and a strong focus on meeting your goals. We understand that every project is unique, which is why we provide tailored strategies that align with your vision, timeline, and budget. Our proactive approach ensures effective coordination, risk management, and seamless communication among all stakeholders. 
-	<ul class="ul2"
+<p>At Acadia Engineering, our Project Management services are designed to lead your projects from concept to completion with precision, efficiency, and a strong focus on meeting your goals. We understand that every project is unique, which is why we provide tailored strategies that align with your vision, timeline, and budget. Our proactive approach ensures effective coordination, risk management, and seamless communication among all stakeholders. </p>
+								<ul class="ul2"
 		
-<p>Our Project Management Services Include:</p>
+<p>Our Project Management Services Include:
 <ul>						
 							  <li>Project Planning – We develop comprehensive project plans that define the scope, schedule, and resource requirements. Our planning process ensures a clear roadmap for success, identifying key milestones and potential challenges early on.</li>
 								<li>Budget Development – Our team prepares detailed and realistic budgets that align with project goals while accounting for potential risks and contingencies. We work to maximize value while maintaining financial accountability.	</li>							
@@ -99,7 +100,8 @@
 							</ul>
 
 </section>
-
+				</div>
+</div>
 
 		<!-- Footer -->
 			<footer id="footer">
