--- a/Sustainability.html
+++ b/Sustainability.html
@@ -74,7 +74,8 @@
         <source src="video/Video5.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    
+	 <img id="banner-image" src="your-image.jpg" alt="Mobile Banner Image">
+
 </section>
 
 
