--- a/Services.html
+++ b/Services.html
@@ -143,7 +143,7 @@
 						<div class="6u">
 							<section class="special">
 								<div class="image-label-container">
-        <img src="images/AdobeStock_412432712.jpeg" alt="Contract Administration">
+        <img src="images/CA1.jpeg" alt="Contract Administration">
         <div class="image-label">Contract Administration</div>
       </div>
 							<ul style="list-style-type: none; padding: 0;">
@@ -155,6 +155,39 @@
 								<li>Claim and Dispute Resolution</li>
 								<li>Risk Management</li>
 								<li>Conformance Inspections</li>
+							</ul>
+                          </section>
+						</div>
+				</div>
+			</section>
+<div class="row">
+						<div class="6u">
+							<section class="special">
+								<div class="image-label-container">
+        <img src="images/pm1.jpeg" alt="Land Development">
+        <div class="image-label">Project Management</div>
+      </div>
+							  <ul style="list-style-type: none; padding: 0;">
+   							    <li>Project Planning</li>
+									<li>Budget Development</li>
+									<li>Cost Control</li>
+									<li>Stakeholder Engagement</li>
+									<li>Quality Assurance and Control</li>
+									<li>Permitting and Regulatory Approvals</li>
+							  </ul>
+</section>
+						</div>
+						<div class="6u">
+							<section class="special">
+								<div class="image-label-container">
+        <img src="images/20220929_142652.jpg" alt="Contract Administration">
+        <div class="image-label">Engineering Survey</div>
+      </div>
+							<ul style="list-style-type: none; padding: 0;">
+								
+							    <li>Topographic Survey</li>
+								<li>Remote Sensing &amp; UAV Surveys</li>
+								<li>Construction Surveys</li>
 							</ul>
                           </section>
 						</div>
