--- a/Municipal Engineering.html
+++ b/Municipal Engineering.html
@@ -38,6 +38,14 @@
             window.addEventListener("wheel", scrollPage, { passive: false });
         });
     </script>
+		</script>
+		<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        if (window.innerWidth <= 760) {
+            window.location.href = "Services-Municipal.html"; // Change to your mobile HTML page
+        }
+    });
+</script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
