--- a/Transportation Engineering.html
+++ b/Transportation Engineering.html
@@ -38,6 +38,13 @@
             window.addEventListener("wheel", scrollPage, { passive: false });
         });
     </script>
+		<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        if (window.innerWidth <= 760) {
+            window.location.href = "Services-Transportation.html"; // Change to your mobile HTML page
+        }
+    });
+</script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -103,7 +110,7 @@
     <div class="overlay2">
         <h5>Urban and Rural Roads</h5>
         <div class="columns-container">
-          <div class="column">
+          <div class="card">
             <h6>Roadway Design & Rehabilitation</h6>
               <ul>
                   <li>Concept to Detailed Design&nbsp;</li>
