--- a/Water.html
+++ b/Water.html
@@ -69,14 +69,14 @@
 		<!-- Glassmorphism Banner -->
     <section class="glass-banner2">
         <div class="glass glass-content2">
-          <h6 class="custom-h6">Resilient Solutions for Sustainable Development</h6>
-<p class="glass-paragraph">At Acadia Engineering, we specialize in water resource management that meets the evolving needs of government agencies and land developers across British Columbia and Ontario. Our expertise ensures that infrastructure and development projects are climate-resilient, environmentally responsible, and fully compliant with provincial and municipal regulations.</p>
-</div>
+          <h2 class="custom-h2">water resources</h2>
+      </div>
     </section>
 
     <!-- Glass Cards Section -->
     <section class="glass2" style="padding: 40px; text-align: center;background-color: #F8F8F8; color: #cfb06e;">
         <h6>Our Expertise</h6>
+        <p>At Acadia Engineering, we specialize in water resource management that meets the evolving needs of government agencies and land developers across British Columbia and Ontario. Our expertise ensures that infrastructure and development projects are climate-resilient, environmentally responsible, and fully compliant with provincial and municipal regulations.</p>
 <div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
       <div class="glass-card2" style="padding: 20px; width: 250px;">
           <h4 class="custom-h4">Stormwater Management &amp; Climate Resilience</h4>
