Update Board of Directors.html

--- a/Board of Directors.html
+++ b/Board of Directors.html
@@ -75,7 +75,7 @@
 						<div class="6u">
 						  <section class="special">
 								<a href="#" class="image fit">
-									<img src="images/Brianne Chard_BW.jpg" alt="Steve Harvey" style="height: 350px; object-fit: cover;">
+									<img src="images/Brianne Chard_BW.jpg" alt="Brianne Chard" style="height: 650px; object-fit: cover;">
 								</a>
 								<h3>BRIANNE CHARD</h3>
 							<h4>Chair</h4>
@@ -84,7 +84,7 @@
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit">
-									<img src="images/michelle-2.jpg" alt="Josh Culp" style="height: 350px; object-fit: cover;">
+									<img src="images/michelle-2.jpg" alt="Michelle Culp" style="height: 650px; object-fit: cover;">
 								</a>
 								<h3>Michelle Culp</h3>
 								<h4>Director</h4>
@@ -96,7 +96,7 @@
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit">
-								<img src="images/steve.png" alt="Alex Bridgett" style="height: 350px; object-fit: cover;">
+								<img src="images/steve.png" alt="Steve Harvey" style="height: 650px; object-fit: cover;">
 								</a>
 								<h3>STEVE HARVEY, P. ENG.</h3>
 								<h4>Director</h4>
@@ -105,7 +105,7 @@
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit">
-								<img src="images/Headshot1.jpg" alt="Josh Culp" style="height: 350px; object-fit: cover;">
+								<img src="images/Headshot1.jpg" alt="Josh Culp" style="height: 650px; object-fit: cover;">
 								</a>
 								<h3>Joshua Culp, P.L. Eng., LET</h3>
 								<h4>Director</h4>
