--- a/Leadership.html
+++ b/Leadership.html
@@ -79,7 +79,7 @@
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit">
-									<img src="images/steve.png" alt="Steve Harvey" style="height: 350px; object-fit: cover;">
+									<img src="images/Steve_enhanced_enhanced.jpg" alt="Steve Harvey" style="height: 650px; object-fit: cover;">
 								</a>
 								<h3>Steve Harvey, P. Eng.</h3>
 								<h4>President / senior engineer&nbsp;</h4>
@@ -90,7 +90,7 @@
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit">
-									<img src="images/Headshot1.jpg" alt="Josh Culp" style="height: 350px; object-fit: cover;">
+									<img src="images/Headshot1.jpg" alt="Josh Culp" style="height: 650px; object-fit: cover;">
 								</a>
 								<h3>Joshua Culp, P.L. eng., let&nbsp;</h3>
 								<h4>CEO / Senior engineer</h4>
@@ -103,17 +103,17 @@
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit">
-									<img src="images/Brianne Chard_BW.jpg" alt="Alex Bridgett" style="height: 350px; object-fit: cover;">
+									<img src="images/BrianneChard-563-3.jpg" alt="Brianne Chard" style="height: 650px; object-fit: cover;">
 								</a>
 								<h3>Brianne Chard, Director</h3>
 								<h4>Chief Financial Officer</h4>
-								  <p>Steve holds a Bachelor’s Degree of Science in civil engineering and diploma in Civil Engineering Technology and is designated as a Professional Engineer with EGBC in British Columbia and PEO in Ontario. Steve has designed and managed hundreds of infrastructure upgrade projects for Municipal, Ministry, and Private clients including:</p>
+								  <p>Brianne is the backbone of Acadia Engineering.&nbsp;&nbsp;</p>
 </section>
 						</div>
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit">
-								<img src="images/Alex Bridgett - Photo - 2023-07-27_Reduced.jpg" alt="Josh Culp" style="height: 350px; object-fit: cover;">
+								<img src="images/Alex Bridgett - Photo - 2023-07-27_Reduced.jpg" alt="Alex Bridgett" style="height: 650px; object-fit: cover;">
 								</a>
 								<h3>Alexander Bridgett</h3>
 								<h4>Vice-President Engineering Design</h4>
