--- a/Corporate Governance.html
+++ b/Corporate Governance.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Corporate Governance - Acadia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
@@ -11,6 +12,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
+		<script src="js/nav.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -58,7 +60,6 @@
             <a href="#">Contact</a>
             <ul class="dropdown-menu right-align">
                 <li><a href="Office Locations.html">Office Locations</a></li>
-                <li><a href="Request Quote.html">Request a Quote</a></li>
                 <li><a href="Careers.html">Join Our Team</a></li>
             </ul>
         </li>
