--- a/Office Locations.html
+++ b/Office Locations.html
@@ -62,7 +62,6 @@
             <a href="#">Contact</a>
             <ul class="dropdown-menu right-align">
                 <li><a href="Office Locations.html">Office Locations</a></li>
-                <li><a href="Request Quote.html">Request a Quote</a></li>
                 <li><a href="Careers.html">Join Our Team</a></li>
             </ul>
         </li>
@@ -97,7 +96,7 @@
 							<section class="special">
 								<a href="#" class="image fit"><img src="images/Vancouver.jpeg" alt="" /></a>
 								<h3><strong>Vancouver, BC</strong></h3>
-								<p>997 Seymour Street,&nbsp;</p>
+								<p>#250 - 997 Seymour Street,&nbsp;</p>
 							  <p>Vancouver, British Columbia, V6B 3M1</p>
 								<p>Email: Josh@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Office: (778) 732-5413</p>
 						
