--- a/Careers.html
+++ b/Careers.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Ion by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 	<head>
-		<title>Contact Us - Acadia</title>
+		<title>Board of Directors - Acadia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -25,39 +21,36 @@
 
 		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
-				<h1><a href="#">Acadia</a></h1>
-					<nav id="nav">
-    <ul>
+				<h1><a href="index.html">Acadia</a></h1>
+				<nav id="nav">
+					<ul>
         <li><a href="index.html">Home</a></li>
 
-        <!-- About Us Dropdown -->
         <li class="dropdown">
             <a href="#">About Us</a>
             <ul class="dropdown-menu">
                 <li><a href="Our Company.html">Overview</a></li>
                 <li><a href="Leadership.html">Leadership</a></li>
                 <li><a href="Board of Directors.html">Board of Directors</a></li>
-                <li><a href="Corporate Governance.html">Corporate Governance</a></li>
-                <li><a href="Sustainability.html">Sustainability</a></li>
-                <li><a href="First Nations Relations.html">First Nations</a></li>
+				<li><a href="Corporate Governance.html">Corporate Governance</a></li>
+				<li><a href="Sustainability.html">Sustainability</a></li>
+				<li><a href="First Nations.html">First Nations</a></li>
             </ul>
         </li>
 
-        <!-- Expertise Dropdown (Centered) -->
         <li class="dropdown">
             <a href="#">Expertise</a>
             <ul class="dropdown-menu center-align">
                 <li><a href="Municipal Engineering.html">Municipal Engineering</a></li>
                 <li><a href="Transportation Engineering.html">Transportation Engineering</a></li>
                 <li><a href="Land Development.html">Land Development</a></li>
-                <li><a href="Contract Administration.html">Contract Administration</a></li>
+				<li><a href="Land Development.html">Contract Administration</a></li>
                 <li><a href="Project Management.html">Project Management</a></li>
-                <li><a href="Water.html">Water</a></li>
-                <li><a href="Innovation.html">Innovation</a></li>
+				<li><a href="Land Development.html">Water</a></li>
+				<li><a href="Land Development.html">Innovation</a></li>
             </ul>
         </li>
 
-        <!-- Contact Dropdown (Fixed Alignment to Avoid Overflow) -->
         <li class="dropdown">
             <a href="#">Contact</a>
             <ul class="dropdown-menu right-align">
@@ -72,79 +65,51 @@
 		<!-- Main -->
 			<section id="main" class="wrapper style1">
 				<header class="major">
-					<h2>where to find us</h2>
-</header>
-				<div class="container">
-					<div class="row">
-						<div class="8u">
-							<section> <a href="#" class="image fit"><img src="images/Offices.png" alt="" /></a>							</section>
-						</div>
-</div>
+			
 					<hr class="major" />
-					<div class="row">
-	<div class="6u">
-							<section class="special">
-								<a href="#" class="image fit"><img src="images/Toronto.jpeg" alt="" /></a>
-								<h3><strong>Toronto, ON</strong></h3>
-								<p>121 Dundas Street East, Suite 103A,&nbsp;</p>
-							  	<p>Belleville, Ontario K8N 1C3, Canada&nbsp;</p>
-								<p>Email: Steve@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Office: (613) 779-1144</p>
-
-							</section>
-	</div>
-						<div class="6u">
-							<section class="special">
-								<a href="#" class="image fit"><img src="images/Vancouver.jpeg" alt="" /></a>
-								<h3><strong>Vancouver, BC</strong></h3>
-								<p>#103 - 39767 Government Road,&nbsp;</p>
-							  <p>Squamish, British Columbia, V8B 0G3&nbsp;</p>
-								<p>Email: Josh@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Office: (250) 668-7534</p>
-						
-						<hr class="major" />
-	</section>
-								</div>
+					 <div class="align-center">
+						<h2><strong>Careers&nbsp;</strong></h2> 
+						 </div>
 					<div class="row">
 						<div class="6u">
-	  						<section class="special">
-								<a href="#" class="image fit"><img src="images/Ottawa.jpeg" alt="" /></a>
-								<h3><strong>Ottawa, On</strong></h3>
-								<p>121 Dundas Street East, Suite 103A,&nbsp;</p>
-							  	<p>Belleville, Ontario K8N 1C3, Canada&nbsp;</p>
-								<p>Email: Steve@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Office: (613) 779-1144</p>
-
-							</section>
+						  <section class="special">
+								<a href="Project Manager.html" class="image fit">
+									<img src="images/career1.jpeg" alt="PM" style="height: 600px; object-fit: cover;">
+								</a>
+								<h3>Civil Engineer / Project Manager</h3>
+							<h4>Belleville, On</h4>
+</section>
 						</div>
 						<div class="6u">
 							<section class="special">
-								<a href="#" class="image fit"><img src="images/Squamish3.jpeg" alt="" /></a>
-								<h3><strong>Squamish, bc</strong></h3>
-								<p>#103 - 39767 Government Road,&nbsp;</p>
-							  <p>Squamish, British Columbia, V8B 0G3&nbsp;</p>
-								<p>Email: Josh@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Office: (778) 732-5413</p>
-				</div>
-								<hr class="major" />
-										</div>
-					<div class="row">
-							<div class="6u">
-								<section class="special">
-								<a href="#" class="image fit"><img src="images/Belleville.jpeg" alt="" /></a>
-								<h3><strong>Belleville, On</strong></h3>
-								<p>121 Dundas Street East, Suite 103A,&nbsp;</p>
-							  	<p>Belleville, Ontario K8N 1C3, Canada&nbsp;</p>
-								<p>Email: Steve@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Office: (613) 779-1144</p>
-
-							</section>
-						</div>
-						<div class="6u">
-							<section class="special">
-								<a href="#" class="image fit"><img src="images/AdobeStock_531515260_Preview.jpeg" alt="" /></a>
-								<h3><strong>Ladysmith, bc</strong></h3>
-								<p>1126 Sharp Place,&nbsp;</p>
-							  <p>Ladysmith, British Columbia, V9G 1A2&nbsp;</p>
-								<p>Email: Josh@acadiaeng.ca&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Office: (250) 668-7534</p>
-							</section>
+								<a href="Project Technologist.html" class="image fit">
+									<img src="images/career2.jpeg" alt="Project Tech" style="height: 600px; object-fit: cover;">
+								</a>
+								<h3>Project Technologist</h3>
+								<h4>Belleville, On</h4>
+</section>
 						</div>
 					</div>
+					</div>
+					<div class="row">
+						<div class="6u">
+							<section class="special">
+								<a href="Water Engineer.html" class="image fit">
+								<img src="images/water1.jpeg" alt="Steve Harvey" style="height: 600px; object-fit: cover;">
+								</a>
+								<h3>Water Resource Engineer</h3>
+								<h4>Vancouver, BC</h4>
+</section>
+						</div>
+						<div class="6u">
+							<section class="special">
+								<a href="Project TechnologistS.html" class="image fit">
+								<img src="images/trans6.jpeg" alt="Josh Culp" style="height: 600px; object-fit: cover;">
+								</a>
+								<h3>PROJECT TECHNOLOGIST</h3>
+								<h4>Squamish, BC</h4>
+</section>
+						</div>
 				</div>
 			</section>
 
