--- a/Project Technologist.html
+++ b/Project Technologist.html
@@ -79,6 +79,9 @@
 				<div class="container">
 						<div class="8u">
 <section>
+	<p>Location: Belleville, ON - Must reside or be willing to relocate</p>
+        <p>Employment Type: Full-Time / Contract (Flexible)</p>
+        <p>Company: Acadia Engineering</p>
   <p>Acadia Engineering Inc. is a multi-disciplinary company that offers engineering services including subdivision development designs and municipal infrastructure designs.&nbsp;</p>
   <p>Acadia is seeking a Civil Designer. You will be responsible for leading development and municipal project designs, using Ontario Standards.&nbsp;</p>
   <p>Key Responsibilities: </p>
