--- a/Careers.html
+++ b/Careers.html
@@ -20,6 +20,8 @@
 	<body id="top">
 
 		<!-- Header -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 			<header id="header" class="skel-layers-fixed">
 				<h1><a href="index.html">Acadia</a></h1>
 				<nav id="nav">
@@ -83,7 +85,7 @@
 						<div class="6u">
 							<section class="special">
 								<a href="Project Technologist.html" class="image fit">
-									<img src="images/career2.jpeg" alt="Project Tech" style="height: 600px; object-fit: cover;">
+									<img src="images/career3.jpeg" alt="Project Tech" style="height: 600px; object-fit: cover;">
 								</a>
 								<h3>Project Technologist</h3>
 								<h4>Belleville, On</h4>
@@ -104,7 +106,7 @@
 						<div class="6u">
 							<section class="special">
 								<a href="Project TechnologistS.html" class="image fit">
-								<img src="images/trans6.jpeg" alt="Josh Culp" style="height: 600px; object-fit: cover;">
+								<img src="images/Squamish4.jpg" alt="Josh Culp" style="height: 600px; object-fit: cover;">
 								</a>
 								<h3>PROJECT TECHNOLOGIST</h3>
 								<h4>Squamish, BC</h4>
