--- a/Corporate Governance.html
+++ b/Corporate Governance.html
@@ -22,6 +22,7 @@
 	<body id="top">
 
 		<!-- Header -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 			<header id="header" class="skel-layers-fixed">
 				<h1><a href="index.html">Acadia</a></h1>
 				<nav id="nav">
